--- a/AtividadeCorreios/AtividadeCorreios/index.html
+++ b/AtividadeCorreios/AtividadeCorreios/index.html
@@ -1,8 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
+<head>
+    <link href="Content/styles.css" rel="stylesheet" />
+</head>
 <body>
-    <form name="frm" action="frete2.asp" method="post" ID="Form1">
-        <fieldset style="background: EEEEEE;">
+    <form class="content" name="frm" action="frete2.asp" method="post" ID="Form1">
+        <fieldset style="background: #EEEEEE;">
             <legend>Calculo de Frete</legend>
             <div>
                 <span style="width:130px;">Codigo:</span>
@@ -79,7 +82,7 @@
             </div>
             <div>
                 <span>
-                    <input type="button" name="btnconsulta" value="Consultar" />
+                    <input id="BotaoConsultar" type="button" name="btnconsulta" value="Consultar" />
                 </span>
             </div>
         </fieldset>
