--- a/AtividadeCorreios/AtividadeCorreios/index.html
+++ b/AtividadeCorreios/AtividadeCorreios/index.html
@@ -1,6 +1,10 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <body>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <form name="frm" action="frete2.asp" method="post" ID="Form1">
         <fieldset style="background: EEEEEE;">
             <legend>Calculo de Frete</legend>
@@ -84,5 +88,10 @@
             </div>
         </fieldset>
     </form>
+
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="Scripts/Utils/scripts.js"></script>
 </body>
 </html>
