--- a/AtividadeCorreios/AtividadeCorreios/index.html
+++ b/AtividadeCorreios/AtividadeCorreios/index.html
@@ -8,7 +8,9 @@
 <body>
     <form class="content" name="frm" action="frete2.asp" method="post" ID="Form1">
         <fieldset id="Form">
-            <legend>Calculo de Frete</legend>
+            <div id="titulo">
+                <span style="width:130px;">Calculo de Frete</span>
+            </div>
 
             <div>
                 <span style="width:130px;">Cep Origem:</span>
@@ -49,7 +51,8 @@
                 <span style="width:130px;">Valor declarado:</span>
                 <span><input type="text" name="valordeclarado" value=""></span>
             </div>
-            
+  
+            <br />
             <div>
                 <span>
                     <input id="BotaoConsultar" type="button" name="btnconsulta" value="Consultar" />
@@ -58,6 +61,7 @@
         </fieldset>
     </form>
 
+   
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
