novo html "newpage"

--- a/AtividadeCorreios/AtividadeCorreios/index.html
+++ b/AtividadeCorreios/AtividadeCorreios/index.html
@@ -9,7 +9,6 @@
     <form class="content" name="frm" action="frete2.asp" method="post" ID="Form1">
         <fieldset id="Form">
             <legend>Calculo de Frete</legend>
-
             <div>
                 <span style="width:130px;">Cep Origem:</span>
                 <span><input type="text" name="cepori" value=""></span>
@@ -49,10 +48,10 @@
                 <span style="width:130px;">Valor declarado:</span>
                 <span><input type="text" name="valordeclarado" value=""></span>
             </div>
-            
+
             <div>
                 <span>
-                    <input id="BotaoConsultar" type="button" name="btnconsulta" value="Consultar" />
+                    <input id="BotaoConsultar" type="button" name="btnconsulta" value="Consultar" onclick="location.href = 'file:///C:/Users/900091/source/repos/AtividadeCorreios/AtividadeCorreios/AtividadeCorreios/newpage.html'" />
                 </span>
             </div>
         </fieldset>
