--- a/AtividadeCorreios/AtividadeCorreios/index.html
+++ b/AtividadeCorreios/AtividadeCorreios/index.html
@@ -1,9 +1,10 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <link href="Content/styles.css" rel="stylesheet" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="Content/styles.css" rel="stylesheet" />
 </head>
 <body>
     <form class="content" name="frm" action="frete2.asp" method="post" ID="Form1">
@@ -11,57 +12,81 @@
             <div id="titulo">
                 <span style="width:130px;">Calculo de Frete</span>
             </div>
-
-            <div>
-                <span style="width:130px;">Cep Origem:</span>
-                <span><input type="text" name="cepori" value=""></span>
+            <div class="row">
+                <div class="input-group mb-1">
+                    <span class="input-group-text">Cep Origem:</span>
+                    <div>
+                        <input type="text" name="cepori" value="">
+                    </div>
+                </div>
             </div>
-            <div>
-                <span style="width:130px;">Cep Destino:</span>
-                <span><input type="text" name="cepdes" value=""></span>
+            <div class="row">
+                <div class="input-group mb-1">
+                    <span class="input-group-text">Cep Destino:</span>
+                    <div>
+                        <input type="text" name="cepdes" value="">
+                    </div>
+                </div>
             </div>
-            <div>
-                <span style="width:130px;">Formato:</span>
-                <span>
-                    <select id="MeuSelect" name="formato" size="1">
-                        <option value="1">Caixa/pacote</option>
-                    </select>
-                </span>
+            <br />
+            <div class="row">
+                <div class="input-group mb-1">
+                    <span class="input-group-text">Formato:</span>
+                    <div>
+                        <select id="MeuSelect" name="formato" size="1">
+                            <option value="1">Caixa/pacote</option>
+                        </select>
+                    </div>
+                </div>
             </div>
-            <div>
-                <span style="width:130px;">Peso:</span>
-                <span><input type="text" name="peso" value=""></span>
+            <div class="row">
+                <div class="input-group mb-1">
+                    <span class="input-group-text">Peso:</span>
+                    <div>
+                        <input type="text" name="peso" value="">
+                    </div>
+                </div>
             </div>
-
-            <div>
-                <span style="width:130px;">Comprimento:</span>
-                <span><input type="text" name="comprimento" value=""></span>
+            <div class="row">
+                <div class="input-group mb-1">
+                    <span class="input-group-text">Comprimento:</span>
+                    <div>
+                        <input type="text" name="comprimento" value="">
+                    </div>
+                </div>
             </div>
-            <div>
-                <span style="width:130px;">Altura:</span>
-                <span><input type="text" name="altura" value=""></span>
+            <div class="row">
+                <div class="input-group mb-1">
+                    <span class="input-group-text">Altura:</span>
+                    <div>
+                        <input type="text" name="altura" value="">
+                    </div>
+                </div>
             </div>
-            <div>
-                <span style="width:130px;">Largura:</span>
-                <span><input type="text" name="largura" value=""></span>
+            <div class="row">
+                <div class="input-group mb-1">
+                    <span class="input-group-text">Largura:</span>
+                    <div>
+                        <input type="text" name="largura" value="">
+                    </div>
+                </div>
             </div>
-
-
-            <div>
-                <span style="width:130px;">Valor declarado:</span>
-                <span><input type="text" name="valordeclarado" value=""></span>
+            <div class="row">
+                <div class="input-group mb-1">
+                    <span class="input-group-text">Valor declarado:</span>
+                    <div>
+                        <input type="text" name="valordeclarado" value="">
+                    </div>
+                </div>
             </div>
-  
             <br />
             <div>
                 <span>
-                    <input id="BotaoConsultar" type="button" name="btnconsulta" value="Consultar" />
+                    <button name="btnconsulta" id="BotaoConsultar" type="button" class="btn btn-warning">Consultar</button>
                 </span>
             </div>
         </fieldset>
     </form>
-
-   
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
