--- a/AtividadeCorreios/AtividadeCorreios/index.html
+++ b/AtividadeCorreios/AtividadeCorreios/index.html
@@ -8,7 +8,9 @@
 <body>
     <form class="content" name="frm" action="frete2.asp" method="post" ID="Form1">
         <fieldset id="Form">
-            <legend>Calculo de Frete</legend>
+            <div id="titulo">
+                <span style="width:130px;">Calculo de Frete</span>
+            </div>
 
             <div>
                 <span style="width:130px;">Cep Origem:</span>
