--- a/AtividadeCorreios/AtividadeCorreios/newpage.html
+++ b/AtividadeCorreios/AtividadeCorreios/newpage.html
@@ -7,7 +7,15 @@
     <title></title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+
+    <style>
+        body{
+            height: 100vh;
+            background-image: url('https://wallpaperplay.com/walls/full/d/e/2/49146.jpg');
+            background-size:cover;
+        }
+
+    </style>
 
 </head>
 <body>
@@ -41,6 +49,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha256-Kg2zTcFO9LXOc7IwcBx1YeUBJmekycsnTsq2RuFHSZU=" crossorigin="anonymous"></script>
-    <script src="Scripts/Utils/scripts.js"></script>
+    <script src="Scripts/Utils/scripts2.js"></script>
 </body>
 </html>
