--- a/AtividadeCorreios/AtividadeCorreios/index.html
+++ b/AtividadeCorreios/AtividadeCorreios/index.html
@@ -55,7 +55,7 @@
             <br />
             <div>
                 <span>
-                    <input id="BotaoConsultar" type="button" name="btnconsulta" value="Consultar" onclick="location.href = 'file:///C:/Users/900091/source/repos/AtividadeCorreios/AtividadeCorreios/AtividadeCorreios/newpage.html'" />
+                    <input id="BotaoConsultar" type="button" name="btnconsulta" value="Consultar"  />
                 </span>
             </div>
         </fieldset>
@@ -66,5 +66,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="Scripts/Utils/scripts.js"></script>
+
 </body>
 </html>
