--- a/AtividadeCorreios/AtividadeCorreios/index.html
+++ b/AtividadeCorreios/AtividadeCorreios/index.html
@@ -16,7 +16,7 @@
                 <div class="input-group mb-1">
                     <span class="input-group-text">Cep Origem:</span>
                     <div>
-                        <input type="text" name="cepori" value="">
+                        <input type="text" name="sCepOrigem" value="">
                     </div>
                 </div>
             </div>
@@ -24,7 +24,7 @@
                 <div class="input-group mb-1">
                     <span class="input-group-text">Cep Destino:</span>
                     <div>
-                        <input type="text" name="cepdes" value="">
+                        <input type="text" name="sCepDestino" value="">
                     </div>
                 </div>
             </div>
@@ -33,7 +33,7 @@
                 <div class="input-group mb-1">
                     <span class="input-group-text">Formato:</span>
                     <div>
-                        <select id="MeuSelect" name="formato" size="1">
+                        <select id="MeuSelect" name="nCdFormato" size="1">
                             <option value="1">Caixa/pacote</option>
                         </select>
                     </div>
@@ -43,7 +43,7 @@
                 <div class="input-group mb-1">
                     <span class="input-group-text">Peso:</span>
                     <div>
-                        <input type="text" name="peso" value="">
+                        <input type="text" name="nVlPeso" value="">
                     </div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                 <div class="input-group mb-1">
                     <span class="input-group-text">Comprimento:</span>
                     <div>
-                        <input type="text" name="comprimento" value="">
+                        <input type="text" name="nVlComprimento" value="">
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                 <div class="input-group mb-1">
                     <span class="input-group-text">Altura:</span>
                     <div>
-                        <input type="text" name="altura" value="">
+                        <input type="text" name="nVlAltura" value="">
                     </div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                 <div class="input-group mb-1">
                     <span class="input-group-text">Largura:</span>
                     <div>
-                        <input type="text" name="largura" value="">
+                        <input type="text" name="nVlLargura" value="">
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                 <div class="input-group mb-1">
                     <span class="input-group-text">Valor declarado:</span>
                     <div>
-                        <input type="text" name="valordeclarado" value="">
+                        <input type="text" name="nVlValorDeclarado" value="">
                     </div>
                 </div>
             </div>
